--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -26,6 +26,7 @@
 }
 
 .home-content{
+    overflow: hidden;
     width: 90%;
     box-sizing: border-box;
     display: flex;
@@ -40,6 +41,7 @@
 }
 
 .hello{
+    box-sizing: border-box;
     width: 95%;
     max-width: 400px;
     display: flex;
