--- a/src/Blog/Blog.css
+++ b/src/Blog/Blog.css
@@ -18,11 +18,8 @@
     box-sizing: border-box;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: center;
-    gap: 12px;
     flex-wrap: wrap;
+    gap: 20px;
 }
 .search-bar-section{
     width: 80%;
@@ -30,6 +27,7 @@
     margin-bottom: 20px;
 }
 .search-bar{
+    outline: none;
     font-size: 16px;
     padding: 5px;
     width: 100%;
