--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -127,6 +127,13 @@
     filter: drop-shadow(0px 0px 4px aqua);
     border: 2px solid aqua;
 }
+.latest-blog-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 450px;
+    margin-bottom: 30px;
+}
 
 
 
