--- a/src/components/BlogTopicCard/BlogTopicCard.css
+++ b/src/components/BlogTopicCard/BlogTopicCard.css
@@ -1,7 +1,6 @@
 .blog-topic-card{
     position: relative;
     width: 100%;
-    max-width: 450px;
     filter: drop-shadow(0px 0px 4px aqua);
     text-decoration: none;
     overflow: hidden;
@@ -11,7 +10,7 @@
     background-color: #282828;
     cursor: pointer;
     transition-duration: 0.6s;
-    margin-bottom: 30px;
+    flex: 1 1 350px;
 }
 
 .blog-topic-card:hover{
@@ -22,16 +21,18 @@
 
 .blog-topic-card img{
     width: 100%;
+    max-height: 150px;
+    object-fit: cover;
 }
 
-.blog-topic-card h3{
+.card-topic-title{
     margin: 0;
     box-sizing: border-box;
     padding-left: 10px;
     filter: drop-shadow(0px 0px 4px #282828);
     width: 100%;
 }
-.blog-topic-card h4{
+.card-topic-date{
     margin: 0;
     margin-top: 5px;
     box-sizing: border-box;
@@ -41,11 +42,20 @@
     border-bottom: 2px solid purple;
     padding-bottom: 5px;
 }
-.blog-topic-card p{
+.card-topic-info{
     margin: 0;
     text-align: left;
     box-sizing: border-box;
     padding: 10px;
     filter: drop-shadow(0px 0px 4px #282828);
     width: 100%;
+}
+
+.card-topic-views{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    box-sizing: border-box;
+    padding: 5px 0px 0px 10px;
+    margin: 0px;
 }
