--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -38,6 +38,7 @@
     filter: drop-shadow(0px 0px 4px aqua);
     border-radius: 20px;
     color: aliceblue;
+    text-align: center;
 }
 
 .hello{
@@ -144,6 +145,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin-bottom: 30px;
     border-bottom: 2px solid white;
 }
