--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -169,7 +169,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
     padding: 10px;
 }
 .lang-buttons button{
@@ -195,7 +196,7 @@
     filter: drop-shadow(0px 0px 10px purple);
 }
 
-@media (max-width: 800px) {
+@media (min-width: 280px) and(max-width: 800px) {
     .certificates-sec{
         gap: 0px;
     }
@@ -204,7 +205,7 @@
     }
     .lang-buttons button{
         text-align: center;
-        width: max-content;
+        width: fit-content;
         border-radius: 10px 10px 0px 0px;
     }
     .lang-buttons button.selected{
@@ -212,6 +213,32 @@
         border: 2px purple solid;
         transform: translateY(25px);
         filter: drop-shadow(0px 0px 10px purple);
+    }
+}
+
+@media (max-width: 280px){
+    .certificates-sec{
+        gap: 0px;
+    }
+    .lang-buttons{
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+    }
+    .lang-buttons button{
+        box-sizing: border-box;
+        text-align: center;
+        max-width: 45%;
+        border-radius: 10px;
+    }
+    .lang-buttons button.selected{
+        background-color: rgba(128, 0, 128, 0.5);
+        border: 2px purple solid;
+        transform: translateY(0px);
+        filter: drop-shadow(0px 0px 10px purple);
+        border-radius: none;
     }
 }
 
