--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -1,24 +1,14 @@
 @import url('../Animations.css');
-.contact-me{
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    border-radius: 10px;
-    width: 100%;
-    background: linear-gradient(to top, rgba(128, 0, 128, 0.3), transparent);
-}
 
 .say-hello{
+    box-sizing: border-box;
+    border-top: 2px solid purple;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 95%;;
-    max-width: 500px;
+    width: 100%;
 }
 .say-hello.hidden{
     display: none;
