--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -11,20 +11,6 @@
     background-size: 25%;
 }
 
-
-.home h1{
-    box-sizing: border-box;
-    width: 100%;
-    text-align: center  ;
-    margin-top: 0px;
-    letter-spacing: 4px;
-    padding: 10px;
-    padding-bottom: 50px;
-    border-radius: 10px;
-    background: linear-gradient(to bottom, #141414, transparent);
-    font-size: 4vw;
-}
-
 .home-content{
     overflow: hidden;
     width: 90%;
@@ -146,8 +132,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 30px;
-    border-bottom: 2px solid white;
+    margin: 30px 0px 0px 0px;
+    border-bottom: 2px solid purple;
 }
 
 .home-glimpse{
@@ -161,7 +147,11 @@
     align-items: center;
     text-decoration: none;
     color: white;
-    border-bottom: 2px solid purple;
+    border-right: 2px solid purple;
+}
+
+.home-glimpse:last-child{
+    border: none;
 }
 
 .home-glimpse p{
