--- a/src/components/BlogTopicCard/BlogTopicCard.css
+++ b/src/components/BlogTopicCard/BlogTopicCard.css
@@ -28,11 +28,13 @@
 .card-topic-title{
     margin: 0;
     box-sizing: border-box;
+    text-align: left;
     padding-left: 10px;
     filter: drop-shadow(0px 0px 4px #282828);
     width: 100%;
 }
 .card-topic-date{
+    text-align: left;
     margin: 0;
     margin-top: 5px;
     box-sizing: border-box;
