--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -101,7 +101,7 @@
     width: 100%;
 }
 
-.latest-blog-heading{
+.home-content-heading{
     box-sizing: border-box;
     margin: 0;
     margin-bottom: -10px;
@@ -120,6 +120,19 @@
     width: 100%;
     max-width: 450px;
     margin-bottom: 30px;
+}
+
+.popular-blogs-container{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 30px 10px;
+    gap: 10px;
 }
 
 .glimpse-div{
