--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,17 +1,34 @@
+
+.nav-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 998;
+    backdrop-filter: blur(10px);
+}
+
+.MainLogo{
+    width: 50px;
+    padding: 10px;
+    animation: ColorChange 2s linear infinite;
+}
+
 .app nav{
 	box-sizing: border-box;
+    position: relative;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
 	color: aqua;
-	justify-self: flex-start;
-	align-self: flex-start;
 	text-align: left;
 	align-items: center;
 	justify-content: flex-start;
 	gap: 10px;
-	width: 100%;
-	padding: 5px;
+	padding: 10px;
     transition-duration: 1s;
 }
 
@@ -69,6 +86,11 @@
 }
 
 @media (min-width: 100px) and (max-width: 1000px){
+    .nav-container{
+        justify-content: flex-start;
+        align-items: center;
+        position: inherit;
+    }
 	.app nav {
         box-sizing: border-box;
         display: flex;
@@ -85,6 +107,7 @@
         top: 0;
         left: 0;
         z-index: 10;
+        height: 100vh
 
     }
     .app nav a{
