--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -9,16 +9,19 @@
     align-items: center;
     text-align: center;
     width: 100%;
+
 }
 .say-hello.hidden{
     display: none;
 }
 .input-fields{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: stretch;
-    width: 400px;
+    width: 95%;
+    max-width: 400px;
     border-radius: 20px;
     padding: 5px;
     border-bottom: 2px solid purple;
