--- a/src/Blog/BlogTopicPage.css
+++ b/src/Blog/BlogTopicPage.css
@@ -54,7 +54,7 @@
     flex-direction: column;
     font-size: 20px;
 }
-.code{
+.blog-topic-page pre{
     font-family: 'Source Code Pro', monospace;
     color:#eee;
     background-color: rgba(34, 34, 34, 0.8);
@@ -68,16 +68,16 @@
     scrollbar-color: #888 #eee;
     font-size: 14px;
 }
-.code::-webkit-scrollbar {
+.blog-topic-page pre::-webkit-scrollbar {
     height: 4px; /* Adjust the scrollbar width as needed */
     border-radius: 4px;
 }
 
-.code::-webkit-scrollbar-thumb {
+.blog-topic-page pre::-webkit-scrollbar-thumb {
     background-color: #888; /* Color of the scrollbar thumb */
     border-radius: 10px;
 }
-.code::-webkit-scrollbar-thumb:hover {
+.blog-topic-page pre::-webkit-scrollbar-thumb:hover {
     background-color: #eee; /* Color of the scrollbar thumb on hover */
 }
 .blog-link{
