--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -42,11 +42,8 @@
 }
 
 .stats{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 25px;
-    border: 5px solid snow;
     max-width: 95%;
+    filter: drop-shadow(0px 4px 4px black);
 }
 
 #Avatar{
