--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -1,6 +1,7 @@
 @import url('../Animations.css');
 
 .AboutMe{
+    position: relative;
     box-sizing: border-box;
     display: flex;
     width: 100%;
@@ -32,11 +33,8 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
-    background-size: 100px;
-    border-radius: 20px;
     width: 100%;
     gap: 20px;
-    margin-bottom: -20px;
     z-index: 3;
     filter: drop-shadow(0px 0px 4px #141414);
 }
@@ -55,15 +53,12 @@
     border: 5px solid #141414;
 }
 
-.techItemList{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    max-width: 400px;
+.about-divider{
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 80px;
+    background: linear-gradient(to top, #282828, transparent);
 }
-
 
 .mainInfo{
     box-sizing: border-box;
@@ -77,6 +72,7 @@
     height: max-content;
     background-color: #282828;
     color: white;
+    z-index: 0;
 }
 
 .bio-sec{
