--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -33,6 +33,7 @@
     width: 100%;
     padding: 20px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -50,6 +51,7 @@
     overflow: hidden;
     filter: drop-shadow(0px 0px 4px white);
     border-radius: 50% 70% 50% 90%;
+    object-fit: cover;
 }
 
 .hello{
